[project]
name = "ai-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "crewai>=0.193.2",
    "datasets>=5.0.0",
    "faiss-cpu>=1.14.3",
    "fastapi>=0.139.2",
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "langchain>=1.3.14",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.7",
    "langchain-groq>=1.1.3",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.9",
    "langsmith>=0.10.9",
    "matplotlib>=3.11.1",
    "nltk>=3.10.0",
    "notebook>=7.6.0",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pytest>=9.1.1",
    "python-dotenv>=1.2.2",
    "regex>=2026.7.19",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
    "seaborn>=0.13.2",
    "spacy>=3.8.14",
    "tiktoken>=0.13.0",
    "tokenizers>=0.22.2",
    "torch>=2.13.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.28.0",
    "tqdm>=4.69.0",
    "transformers>=5.14.1",
    "uvicorn>=0.51.0",
]
